--- a/生成公钥.md
+++ b/生成公钥.md
@@ -1,4 +1,4 @@
-1. 执行ssh-keygen，生成公钥、私钥
+1. 执行ssh-keygen，生成公钥、私钥 -f 指定生成文件的文件名
 2. 进入 cd /root/.ssh
 3. 执行 cat id_rsa.pub >authorized_keys
 4. id_rsa 为私钥
