--- a/生成公钥.md
+++ b/生成公钥.md
@@ -2,3 +2,6 @@
 2. 进入 cd /root/.ssh
 3. 执行 cat id_rsa.pub >authorized_keys
 4. id_rsa 为私钥
+
+
+scp id_rsa.pub root@192.168.16.117:~/.ssh/id_rsa.pub_temp  这里记得重命名一下，以免覆盖B主机原有的公钥
