--- a/生成公钥.md
+++ b/生成公钥.md
@@ -3,5 +3,6 @@
 3. 执行 cat id_rsa.pub >authorized_keys
 4. id_rsa 为私钥
 
+谁想免密登录谁生成一对公钥和私钥，私钥留给自己，公钥发送到目标服务器，然后执行cat xxx >> /root/.ssh/authorized_keys
 
-scp id_rsa.pub root@192.168.16.117:~/.ssh/id_rsa.pub_temp  这里记得重命名一下，以免覆盖B主机原有的公钥
+本地连接119mysql，谁连谁用私钥，然后连接到119上，119的公钥写入到authorized_keys文件中
